# TSThreeUnlock

./: .gitignore  build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/cn/fkj233/tsunlocker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/app_assets/: lang_zh.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native/: AndroidHelper.cpp  AndroidHelper.h  CMakeLists.txt  elf.cpp  logging.h  native.cpp  navive_api.h
app/src/main/java/cn/fkj233/tsunlocker/application/: DefaultApplication.kt
app/src/main/java/cn/fkj233/tsunlocker/hook/: HookEntry.kt
app/src/main/java/cn/fkj233/tsunlocker/ui/activity/: MainActivity.kt
app/src/main/java/cn/fkj233/tsunlocker/ui/activity/base/: BaseActivity.kt
app/src/main/java/cn/fkj233/tsunlocker/ui/view/: MaterialSwitch.kt
app/src/main/java/cn/fkj233/tsunlocker/utils/factory/: FunctionFactory.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/cn/fkj233/tsunlocker/: ExampleUnitTest.kt
keys/: private.pem  public.pem
